 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 * 
 * $Id$
 */
 
TreeTank 4.15
-------------
+ Moved bean-related stuff to beanlayer package.
+ Renamed UTF.convert() to UTF.getBytes([String|int]) 
  and UTF.parse[String|int](). Integer and Long methods are twice as fast and
  compatible to String.
+ BeanUtil now supporting boolean, int, long, float, double, and String.
+ Added FullText annotation to mark that Java bean field must be indexed.
+ Added BeanUtil to make Java beans persistent with TreeTank.
+ Added Session.removeSession() to safely remove a TreeTank file.

TreeTank 4.14
-------------
+ Added index() to IWriteTransaction. Note that this currently only makes
  the first occurrence available for later retrieval.
+ Added FullTextAxis to perform simple contains.
+ Added notion of reference key as multipurpose key.
+ Added lots of test cases.
+ Binary incompatibility because full text root node takes key 1.
+ Added hooks for full text index (inverted index based on prefix tree).
  (FullTextRootNode, FullTextNode, and FullTextLeafNode).
+ Session and transaction tracks close state to prevent access after close.
+ Allow multiple commit() and abort() calls before close().
+ Split IWriteTransaction semantics: now use [commit|abort]() AND close().
+ Fixed bug in axis classes performing tests.
+ Removed checked exceptions from IWriteTransaction exception for commit()
  which must throw an IOException in case the writing to the file failed.

TreeTank 4.13
-------------
+ Binary incompatibility to previous releases due to stored version info.
+ File now storing whether it is checksummed and encrypted.
+ File now storing the version number of TreeTank with which it was created.